chapter-13-browser-based-apps/backend-for-frontend/oauth-agent/deployment/deployment.yaml
#
# The OAuth Agent is deployed as a utility stateless API
#
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oauth-agent
  labels:
    app: oauth-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-agent
  template:
    metadata:
      labels:
        app: oauth-agent
    spec:
      serviceAccountName: oauth-agent
      containers:
      - name: oauth-agent
        image: oauth-agent:1.0.0
