chapter-13-browser-based-apps/backend-for-frontend/oauth-agent/deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oauth-agent-svc
spec:
  selector:
    app: oauth-agent
  ports:
  - name: http
    protocol: "TCP"
    port: 8000
